--- a/course/counter.html
+++ b/course/counter.html
@@ -4,7 +4,7 @@
 <div id="root"></div>
 <script type="text/babel">
     function Counter(){
-        var [cnt,setCnt] = React.useState(0)
+        let [cnt,setCnt] = React.useState(0)
         function cntIncrement(){
             setCnt(cnt + 1)
             document.getElementById("cnt").style.color="blue"
