data from child to parent using call back function

--- a/course/ParentToChild2.html
+++ b/course/ParentToChild2.html
@@ -16,7 +16,7 @@
            curr.current = ref.value
         }
         function handleClick2(){
-            console.log(curr)
+            console.log(curr.current)
         }
         function handleClick(){
             setVal(curr.current)
