--- a/course/Webpage.html
+++ b/course/Webpage.html
@@ -58,6 +58,15 @@
             </ul>
         </div>
     }
+    const Home = () =>{
+        return <h1>Home Page</h1>
+    }
+    const About = () =>{
+        return <h1>About Page</h1>
+    }
+    const Contact = () =>{
+        return <h1>Contact Page</h1>
+    }
     const App = () =>{
         return <div className="app">
             <Header />
