--- a/course/AJAX2.html
+++ b/course/AJAX2.html
@@ -1,39 +1,20 @@
 <script src="babel.min.js"></script>
 <script src="react.development.js"></script>
 <script src="react-dom.development.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js"></script>
 <div id="root"></div>
 <style>
-    .pagination{
+    .pagination {
         display: flex;
         gap: 100px;
     }
 </style>
 <script type="text/babel">
-    const mydata = [
-        {
-            id: '1',
-            url: '2323'
-        },
-        {
-            id: '2',
-            url: '32323'
-        },
-        {
-            id: '3',
-            url: '54545'
-        },
-        {
-            id: '4',
-            url: '5488'
-        },
-        {
-            id: '5',
-            url: '5454'
-        }
-    ]
-    const Pagination = ({pageNo, totalPage, setPageNo}) =>{
-        const handleClick = (eve) =>{
-            switch(eve.target.innerText){
+
+    const Pagination = ({ pageNo, totalPage, setPageNo }) => {
+        const inputRef = React.useRef();
+        const handleClick = (eve) => {
+            switch (eve.target.innerText) {
                 case 'Next':
                     setPageNo(pageNo + 1)
                     break;
@@ -41,55 +22,77 @@
                     setPageNo(pageNo - 1)
                     break;
                 default:
+                    const no = Number(inputRef.current.value);
+                    if (no < 1 || no > totalPage) {
+                        alert("Invvalid Entry")
+                        return
+                    }
+                    setPageNo(no)
 
                     break;
             }
         }
+
         return <div className="pagination">
             <div>
-                <input type="number" /><button onClick={handleClick}>Go</button>
+                <input type="number" ref={inputRef} /><button onClick={handleClick}>Go</button>
             </div>
-            <div><button disabled={pageNo == 1} onClick={handleClick}>Prev</button>{pageNo}<button onClick={handleClick} disabled={pageNo === totalPage}>Next</button></div>
+            <div><button disabled={pageNo === 1} onClick={handleClick}>Prev</button>{pageNo}<button onClick={handleClick} disabled={pageNo === totalPage}>Next</button></div>
             <div>No of Pages:{totalPage}</div>
         </div>
     }
-    const Table = ({ headers, data, columns }) => {
-        const [pageNo,setpageNo] = React.useState(1)
-        return<div><table border="2px">
-                <thead>
-                    <tr>
-                        {
-                            headers.map((val, ind) => {
-                                return <th key={ind}>{val}</th>
-                            })
-                        }
-                    </tr>
-                </thead>
-                <tbody>
+    const Table = ({ headers, data, columns, perPage }) => {
+        const [pageNo, setpageNo] = React.useState(1)
+        const [currData, setCurrData] = React.useState([]);
+        React.useEffect(() => {
+            const end = perPage * pageNo;
+            const start = end - perPage;
+            setCurrData(data.slice(start, end), [pageNo])
+        })
+        return <div><table border="2px">
+            <thead>
+                <tr>
                     {
-                        data.map((obj, k) => {
-                            return <tr key={k}>{
-                                columns.map((ele, index) => {
-                                    return <td key={index}>{obj[ele]}</td>
-                                })
-                            }</tr>
+                        headers.map((val, ind) => {
+                            return <th key={ind}>{val}</th>
                         })
                     }
-                </tbody>
-            </table>
-            <Pagination pageNo={pageNo} totalPage={Math.ceil(data.length / 2)} setPageNo={setpageNo}/>
+                </tr>
+            </thead>
+            <tbody>
+                {
+                    currData.map((obj, k) => {
+                        return <tr key={k}>{
+                            columns.map((ele, index) => {
+                                return <td key={index}>{obj[ele]}</td>
+                            })
+                        }</tr>
+                    })
+                }
+            </tbody>
+        </table>
+            <Pagination pageNo={pageNo} totalPage={Math.ceil(data.length / perPage)} setPageNo={setpageNo} />
         </div>
     }
     const App = () => {
         const [photo, setPhoto] = React.useState([])
-        const handleClick = () => {
-            setPhoto(mydata)
+        const handleClick = async () => {
+            axios.get("https://jsonplaceholder.typicode.com/photos")
+                .then((res) => {
+                    setPhoto(res.data)
+                })
+                .catch((res) => {
+                    console.log("failure", res)
+                })
+                .finally(() => {
+
+                })
         }
         return <div>
             <button onClick={handleClick}>
                 Get Photos
             </button>
-            <p>{photo.length > 0 && <Table headers={["id", "url"]} data={photo} columns={["id", "url"]} />}</p>
+            <p>{photo.length > 0 && <Table headers={["ID", "TITLE", "URL"]} data={photo} columns={["id", "title", "url"]} perPage={100} />}</p>
         </div>
     }
     const rootref = ReactDOM.createRoot(document.getElementById("root"));
